# lazypp

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: pypi-publish.yml
examples/: complex_tasks.py  reusable_file.py  sum_of_files.py
lazypp/: __init__.py  dummy_output.py  exceptions.py  file_lock.py  file_objects.py  reusable_file_objects.py  task.py  utils.py  worker.py
tests/: complex_tasks.py  complex_tasxs.py  prefix  sum_of_files.py  test.pkl  test1.py  test_complex_task.py  test_deps.py  test_entry.py  test_reusable.py  test_task.py
